# vourpy

./: .gitignore  README.md  package.json  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: compat.py  health.py  proposals.py
backend/app/clients/: openai_client.py
backend/app/core/: config.py  errors.py  middleware.py
backend/app/prompts/: proposal_prompt.py
backend/app/schemas/: proposals.py
backend/app/services/: proposal_service.py
backend/tests/: conftest.py  test_routes.py  test_schemas.py  test_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: proposals.ts
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/features/job-discovery/: job-board.tsx  send-proposal-board.tsx
frontend/src/features/proposal-generator/: history-panel.test.tsx  history-panel.tsx  proposal-form.test.tsx  proposal-form.tsx  proposal-result.tsx  schema.ts
frontend/src/hooks/: useProposalHistory.ts
frontend/src/lib/: history.ts  query-client.ts
frontend/src/types/: proposals.ts
